# Langchain-chatbot

./: Chatbot.py  Dockerfile  README.md  chatbot.db  pyproject.toml  requirements.txt  yt_chatbot.db
backend/: simple_chatbot_logic.py  yt_chatbot_logic.py
pages/: 1_Youtube_Chatbot.py  2_File_Chatbot.py
